Added first experimental version of symbolic TE.
Implemented according to Staniek, M., and Lehnertz, K. (2008). Symbolic transfer entropy. Phys Rev Lett 100, 158101. But note that this is work in progress which might contain bugs and will probably not work for all parameters.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,13 @@ transferentropy-sim/Paris
 transferentropy-sim/Saalbach
 transferentropy-sim/Vector*
 transferentropy-sim/output
+
+transferentropy-sim/te-extended
+transferentropy-sim/mi
+transferentropy-sim/te-binless-Frenzel
+transferentropy-sim/te-binless-Kraskov
+transferentropy-sim/te-binless-Leonenko
+transferentropy-sim/te-symbolic
+transferentropy-sim/xcorr
+transferentropy-sim/granger
+transferentropy-sim/test
