--- a/transferentropy-sim/Rakefile
+++ b/transferentropy-sim/Rakefile
@@ -31,7 +31,7 @@ enable_mpi = false
 
 ld_flags_basic = "-lgsl -lgslcblas -lm -lyaml-cpp -L. -lsim"
 ld_flags_flann = "-lflann_cpp"
-obj_base = %W{ #{maketemp_path}/olav.o #{maketemp_path}/te-datainit.o #{maketemp_path}/miniprofiler.o }
+obj = %W{ #{maketemp_path}/olav.o #{maketemp_path}/te-datainit.o #{maketemp_path}/miniprofiler.o }
 
 main_sources = %W{ xcorr.cpp granger.cpp mi.cpp te-extended.cpp te-binless-Leonenko.cpp te-binless-Kraskov.cpp te-binless-Frenzel.cpp te-symbolic.cpp }
 util_sources = %W{ ../olav.cpp ../te-datainit.cpp ../multidimarray.cpp ../multipermutation.cpp ../miniprofiler.cpp }
@@ -39,13 +39,9 @@ util_sources = %W{ ../olav.cpp ../te-datainit.cpp ../multidimarray.cpp ../multip
 if enable_mpi
   cc = "mpic++"
   cflags = "-DSIM_MPI -O3"
-  # obj = ["#{maketemp_path}/sim_mpi.o"] << obj_base
-  obj = obj_base
 else
   cc = "g++"
   cflags = "-O3"
-  # cflags = " -g" # to enable debugging later
-  obj = obj_base
 end
 
 
@@ -119,7 +115,7 @@ task :multipermutation => "#{maketemp_path}/multipermutation.o"
 
 desc "Unit tests"
 file :test => ["causality_test.cpp", :multidimarray, :multipermutation, :obj ] do
-  sh "#{cc} #{cflags} causality_test.cpp #{maketemp_path}/multidimarray.o #{maketemp_path}/multipermutation.o #{obj_base.whitejoin} -o test #{ld_flags_basic}"
+  sh "#{cc} #{cflags} causality_test.cpp #{maketemp_path}/multidimarray.o #{maketemp_path}/multipermutation.o #{obj.whitejoin} -o test #{ld_flags_basic}"
 end
 
 desc "Clean up everything"
